--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Bootstrap Freelancer</title>
 </head>
@@ -39,7 +40,38 @@
 
     <!-- Main content -->
     <main>
-        
+
+        <!-- Sezione Portfolio -->
+        <section class="container text-center color-grey my-5">
+            <h2>PORTFOLIO</h2>
+            <div>--------------- <i class="fa-solid fa-star"></i> ---------------</div>
+           
+            <div class="container text-center">
+                <div class="row row-gap-3 gap-3">
+                  <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
+                   <div class="p-3">Cu3tom colu5n padding</div>
+                  </div>
+                  <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
+                    <div class="p-3">Custom column padding</div>
+                  </div>
+                  <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
+                    <div class="p-3">Custom column padding</div>
+                  </div>
+                  <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
+                    <div class="p-3">Custom column padding</div>
+                  </div>
+                  <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
+                    <div class="p-3">Custom column padding</div>
+                  </div>
+                  <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
+                    <div class="p-3">Custom column padding</div>
+                  </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sezione about -->
+        <section></section>
     </main>
 
     <!-- Footer -->
