--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Header -->
     <header class="container-fluid px-0 text-center">
-        <div class=" position-fixed z-1 w-100 row mx-auto bg-color-grey justify-content-between p-3 ">
+        <div class=" position-fixed z-5 w-100 row mx-auto bg-color-grey justify-content-between p-3 ">
             <div class=" col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <a class="link-header" href="">START BOOTSTRAP</a>
             </div>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <!-- jumbotron -->
-        <div class="container-fluid bg-color-aqua text-light p-6 text-center">
+        <div class="container-fluid bg-color-aqua text-light p-6 z-0 text-center">
             <img class="img-thumbnail" src="https://picsum.photos/200/300" alt="">
             <h2>START BOOTSTRAP</h2>
             <div>--------------- <i class="fa-solid fa-star"></i> ---------------</div>
@@ -42,11 +42,11 @@
     <main>
 
         <!-- Sezione Portfolio -->
-        <section class="container text-center color-grey my-5">
+        <section class="container text-center color-grey z-0 my-5">
             <h2>PORTFOLIO</h2>
-            <div>--------------- <i class="fa-solid fa-star"></i> ---------------</div>
+            <div class="mb-3">--------------- <i class="fa-solid fa-star"></i> ---------------</div>
            
-            <div class="container text-center">
+            <div class="container text-center z-0">
                 <div class="row row-gap-3 gap-3">
                   <div class= "col-lg-4 col-md-6 col-sm-12 bg-color-aqua">
                    <div class="p-3">Cu3tom colu5n padding</div>
@@ -71,7 +71,39 @@
         </section>
 
         <!-- Sezione about -->
-        <section></section>
+        <section class="container-fluid px-0 z-0 bg-color-aqua text-center text-light p-6">
+            <h2>ABOUT</h2>
+            <div>--------------- <i class="fa-solid fa-star"></i> ---------------</div>
+            <div class="container row mx-auto p-5">
+                <div class="col-lg-6 col-sm-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. In obcaecati minima cupiditate repellat alias. Quod quibusdam delectus impedit aut harum omnis rem eius voluptatibus nam dignissimos explicabo, fugit optio facere.</div>
+                <div class="col-lg-6 col-sm-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. In obcaecati minima cupiditate repellat alias. Quod quibusdam delectus impedit aut harum omnis rem eius voluptatibus nam dignissimos explicabo, fugit optio facere.</div>
+            </div>
+            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-download"></i>Download</button>
+        </section>
+
+        <!-- Sezione Contact me -->
+        <section class="container mx-auto color-grey z-0 p-6">
+            <h2 class="text-center">CONTACT ME</h2>
+            <div class="text-center mb-3">--------------- <i class="fa-solid fa-star"></i> ---------------</div>
+        
+            <div class="input-group input-group-sm mb-3">
+                <span>Name</span>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+            </div>
+            <div class="input-group input-group-sm mb-3">
+                <span>Email address</span>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+            </div>
+            <div class="input-group input-group-sm mb-3">
+                <span>Phone number</span>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+            </div>
+            <div class="input-group input-group-sm mb-3">
+                <span>Message</span>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            </div>
+            <button type="button" class="btn btn-success">Send</button>
+        </section>
     </main>
 
     <!-- Footer -->
