--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
             <h2 class="text-center">CONTACT ME</h2>
             <div class="text-center mb-3">--------------- <i class="fa-solid fa-star"></i> ---------------</div>
         
-            <div class="input-group input-group-sm mb-3">
+            <div class="input-group input-group-sm mb-3 z-0">
                 <span>Name</span>
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
             </div>
-            <div class="input-group input-group-sm mb-3">
+            <div class="input-group input-group-sm mb-3 z-0">
                 <span>Email address</span>
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
             </div>
-            <div class="input-group input-group-sm mb-3">
+            <div class="input-group input-group-sm mb-3 z-0">
                 <span>Phone number</span>
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
             </div>
-            <div class="input-group input-group-sm mb-3">
+            <div class="input-group input-group-sm mb-3 z-0">
                 <span>Message</span>
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
             </div>
@@ -107,6 +107,16 @@
     </main>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer class="bg-color-grey p-5 text-light">
+        <section class="container mx-auto text-center">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-4 col-sm-12 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora consequatur amet porro reprehenderit rerum voluptates quo perspiciatis at repellendus dolorum, quae itaque fugit facere eum rem corrupti ut consequuntur numquam!</div>
+                <div class="col-lg-4 col-sm-12 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora consequatur amet porro reprehenderit rerum voluptates quo perspiciatis at repellendus dolorum, quae itaque fugit facere eum rem corrupti ut consequuntur numquam!</div>
+                <div class="col-lg-4 col-sm-12 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora consequatur amet porro reprehenderit rerum voluptates quo perspiciatis at repellendus dolorum, quae itaque fugit facere eum rem corrupti ut consequuntur numquam!</div>
+            </div>
+            <div class="p-5">2019 made by Freelancer </div>
+        </section>
+
+    </footer>
 </body>
 </html>
