--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="container-fluid px-0">
-        <div class=" position-fixed z-999 w-100 row mx-auto align-items-center bg-color-grey justify-content-between p-3 ">
+    <header class="container-fluid px-0 text-light">
+        <div class=" z-999 w-100 row mx-auto align-items-center bg-color-grey justify-content-between p-3 ">
             <div class=" col-xs-2 col-sm-4 col-md-4 col-lg-4 py-2">
                 <a class="link-header" href="">START BOOTSTRAP</a>
             </div>
-            <div class=" col-xs-8 col-sm-5 col-lg-5 col-md-6 row row-cols-md-3 text-center justify-content-end py-2">
-                <div class="col-lg-3 col-xs-4 col">
-                    <a class="link-header" href="">PORTFOLIO</a>
-                </div>
-                <div class="col-lg-2 col-xs-4 col">
-                    <a class="link-header" href="">ABOUT</a>
-                </div>
-                <div class="col-lg-2 col-xs-4 col">
-                    <a class="link-header" href="">CONTACT</a>
-                </div>
-            </div>  
+            <div class="col-5 col-lg-4 row justify-content-end  navbar navbar-expand-sm">
+                        
+                <button class="navbar-toggler mx-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"  style="width:100px; color: grey; border: 2px solid grey;">
+                    <span class="navbar-toggler-icon" style="filter: invert(100%);"><i class="fa-solid fa-grip-lines"></i></span>
+                </button>
+
+                <div class="hidden col-md-4">PORTFOLIO</div>
+                <div class="hidden col-md-4">PORTFOLIO</div>
+                <div class="hidden col-md-4">PORTFOLIO</div>
+            </div>           
         </div>
 
     
